--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#title {
+  font-family: "Space Grotesk", sans-serif;
+}
+
+body {
+  font-family: "Sofia Sans", sans-serif;
+}
